# iot-trace-chain

./: .gitignore  README.md  docker-compose.yaml
.github/workflows/: test.yml
blockchain/: hardhat.config.js  package-lock.json  package.json
blockchain/contracts/: IoTDataRegistry.sol
blockchain/scripts/: deploy.js
blockchain/test/: ioTDataRegistry.test.js
mosquitto/config/: mosquitto.conf
persistence-worker/: Dockerfile  Makefile  pyproject.toml  pytest.ini
persistence-worker/persistence_worker/: __main__.py  blockchain.py  data_processor.py  data_processor_complex.py  delta_writer.py  mqtt_client.py
persistence-worker/persistence_worker/utils/: config.py  contract_abi.py  data_transform.py  hashing.py  logger_config.py  merkle_tree.py  schema.py  time_profiling.py  validation.py
persistence-worker/scripts/: publish_message.sh
persistence-worker/tests/: data_transform_test.py  merkle_tree_test.py
